# ETL_Fundamentus

./: README.md  pyproject.toml
web_scraping_fundamentus/: WebScraping_Dados_Financeiros.ipynb
web_scraping_fundamentus/data/: fundamentus.csv
web_scraping_fundamentus/model/: fundamentus.py
